--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/<your-username>/my-nginx-repo.git'
+                git branch: 'main', url: 'https://github.com/uma123-hub/jenkins.git'
             }
         }
 
